feat: students and classes routes and db:sedds
