# app/api/base.rb
@@ -1,0 +1,7 @@
+class Base < Grape::API
+  format :json
+
+  mount V1::Classes
+  mount V1::Students
+end
+
